--- a/ansible/roles/docker/tasks/user.yml
+++ b/ansible/roles/docker/tasks/user.yml
@@ -6,6 +6,6 @@
 #   A variable is being used here
 - name: Adding user to group docker
   user:
-    name: "{{ xxxxxxx }}"
+    name: "{{ scorcoran }}"
     group: docker
     append: yes
