--- a/ansible/roles/unh698/vars/main.yml
+++ b/ansible/roles/unh698/vars/main.yml
@@ -1,5 +1,6 @@
 ---
 # Here we define variables in a key: value setting
 # that will be used in the unh698 role.
-unh698_image: xxxxxxx
-unh698_command: xxxxxxx
+unh698_image: selifa/docker-cloud-test
+unh698_command: python3 /src/unh698.py
+IP: 54.215.196.198
