--- a/ansible/roles/unh698/vars/main.yml
+++ b/ansible/roles/unh698/vars/main.yml
@@ -2,5 +2,4 @@
 # Here we define variables in a key: value setting
 # that will be used in the unh698 role.
 unh698_image: selifa/docker-cloud-test
-unh698_command: python3 /src/unh698.py
-IP: 54.215.196.198
+unh698_command: python3 unh698.py
